--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ author:
   name             : "Ayush Pandhi"
   avatar           : "profile.png"
   bio              : "PhD Candidate. Radio astronomer; fast radio bursts, pulsars, magnetism, and star formation."
-  location         : "Location"
+  location         : "Toronto, ON, Canada"
   employer         : "University of Toronto"
-  pubmed           : 
+  ADS              : "https://ui.adsabs.harvard.edu/search/q=author%3A%22Pandhi%2C%20Ayush%22&sort=date%20desc%2C%20bibcode%20desc&p_=0"
   googlescholar    : 
   email            : "ayush.pandhi@astro.utoronto.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
